added                   <argLine>                             --add-opens security/security.service=ALL-UNNAMED                             --add-opens security/security.model=ALL-UNNAMED                             --add-opens security/security.view=ALL-UNNAMED                         </argLine>